# django_react_portfolio

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: deploy.yaml  django-ci.yml
config/: asgi.py  deployment_settings.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
portfolio/: admin.py  factories.py  models.py  urls.py  views.py
portfolio/management/commands/: import_certificates.py
portfolio/migrations/: 0001_initial.py  0002_certificateissuer_alter_certificate_pdf_file_and_more.py  0003_project_title.py  0004_alter_project_created_at.py
portfolio/static/portfolio/css/: style.css
portfolio/templates/portfolio/: base.html  certificates.html  contact.html  cv.html  home.html  login.html  projects.html
portfolio/tests/: factories.py  tests_models.py
