[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Flüchter",email = "dominik.fluechter@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
